# newsreadil

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/newsreadil/: __init__.py  newsreadil.py
tests/: Untitled.ipynb  test_newsreadil.py
