[tool.poetry]
name = "newsreadil"
version = "0.1.0"
description = "Python Package to calculate news readibility and get link to the most recent headline"
authors = ["Lestary Barany"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
